# cocos2d-x

./: .buckconfig  .clang-format  .gitignore  .gitmodules  BUCK  CMakeLists.txt
cocos/: CMakeLists.txt  cocos2d.cpp  cocos2d.h
cocos2d/: CMakeLists.txt
cocos2d/cocos/platform/android/: CCApplication-android.cpp  CCApplication-android.h  CCCommon-android.cpp  CCDevice-android.cpp  CCEnhanceAPI-android.cpp  CCEnhanceAPI-android.h  CCFileUtils-android.cpp  CCFileUtils-android.h  CCGL-android.h  CCGLViewImpl-android.cpp  CCGLViewImpl-android.h  CCPlatformDefine-android.h  CCStdC-android.h  CMakeLists.txt  javaactivity-android.cpp
cocos2d/cocos/platform/android/java/src/com/enhance/gameservice/: IGameTuningService.aidl
cocos2d/cocos/platform/android/java/src/org/cocos2dx/lib/: Cocos2dxActivity.java  Cocos2dxHelper.java
cocos2d/cocos/platform/android/jni/: Java_org_cocos2dx_lib_Cocos2dxAccelerometer.cpp  Java_org_cocos2dx_lib_Cocos2dxBitmap.cpp  Java_org_cocos2dx_lib_Cocos2dxBitmap.h  Java_org_cocos2dx_lib_Cocos2dxHelper.cpp  Java_org_cocos2dx_lib_Cocos2dxHelper.h  Java_org_cocos2dx_lib_Cocos2dxRenderer.cpp  JniHelper.cpp  JniHelper.h  TouchesJni.cpp
cocos2d/cocos/platform/android/jni/Common/cpufeatures/: cpu-features.h
cocos2d/cocos/platform/android/jni/Common/native_app_glue/: android_native_app_glue.c  android_native_app_glue.h
cocos2d/cocos/platform/android/jni/Common/ndk_helper/: GLContext.h  JNIHelper.h  NDKHelper.h  gestureDetector.h  gl3stub.c  gl3stub.h  interpolator.cpp  interpolator.h  perfMonitor.h  shader.h  tapCamera.cpp  vecmath.cpp  vecmath.h
(+4189 files in other folders)
